# cpp_cli_template

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  compile_flags.txt
bench/: bench_generator.cpp  bench_modA.cpp
conf/: example_sub1.toml
example/: toml_example.cpp
include/: GeneratorA.hpp  GeneratorB.hpp  Solver.hpp  cli.hpp  cli_subcomA.hpp  cli_subcom_bisection.hpp  cli_subcom_newton.hpp  generator_a.hpp  generator_b.hpp  generator_linear.hpp  generator_quadratic.hpp  igenerator.hpp  load_toml.hpp  setup_logger.hpp  solver.hpp  solver_bisection.hpp  solver_newton.hpp
include/modB/: modB2.hpp
src/: GeneratorA.cpp  GeneratorB.cpp  Makefile  Solver.cpp  cli.cpp  cli_subcomA.cpp  cli_subcom_a.cpp  cli_subcom_bisection.cpp  cli_subcom_newton.cpp  generator_a.cpp  generator_b.cpp  generator_linear.cpp  generator_quadratic.cpp  load_toml.cpp  main.cpp  setup_logger.cpp  solver.cpp  solver_bisection.cpp  solver_newton.cpp
src/mod/CLI11/: Makefile  cmake_install.cmake
src/mod/CLI11/fuzz/: Makefile  cmake_install.cmake
src/mod/CLI11/single-include/: Makefile  cmake_install.cmake
src/mod/CLI11/src/: Makefile  cmake_install.cmake
src/mod/spdlog/: Makefile  cmake_install.cmake
src/modB/: modB2.cpp
tests/: test_generator.cpp  test_modA1.cpp  test_modA2.cpp  test_modB.cpp
